# zenway

./: .clang-format  .gitignore  LICENSE  README.md  build-arch  build-ubuntu-22.04  config.lua  config.yaml  meson.build  test.lua
.github/actions/build-arch/: Dockerfile  action.yml  entrypoint.sh
.github/actions/build-ubuntu-22.04/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: build.yml
config/: config.lua
protocols/: meson.build
src/: AudioState.h  Buffer.cpp  Buffer.h  BufferPool.cpp  BufferPool.h  Compositor.cpp  Compositor.h  Configuration.cpp  Configuration.h  DateTimeSources.cpp  DateTimeSources.h  Draw.cpp  Draw.h  MainLoop.cpp  MainLoop.h  Manager.cpp  Manager.h  NetworkSource.cpp  NetworkSource.h  Output.cpp  Output.h  Outputs.cpp  Outputs.h  Panel.cpp  Panel.h  PowerSource.cpp  PowerSource.h  PowerState.h  PulseAudioSource.cpp  PulseAudioSource.h  Registry.cpp  Registry.h  Roots.cpp  Roots.h  ScriptContext.cpp  ScriptContext.h  Seat.cpp  Seat.h  ShellSurface.cpp  ShellSurface.h  (+18 more)
test/: TestSwayIPC.cpp
zen/: Buffer.cpp  Buffer.h  Configuration.cpp  Configuration.h  Draw.cpp  Draw.h  MainLoop.cpp  MainLoop.h  Manager.cpp  Manager.h  Output.cpp  Output.h  Registry.cpp  Registry.h  ScriptContext.cpp  ScriptContext.h  Seat.cpp  Seat.h  ShellSurface.cpp  ShellSurface.h  main.cpp  meson.build  util.cpp  util.h
zen/Compositors/Sway/: SwayCompositor.cpp  SwayCompositor.h  meson.build
zen/Sources/: DateTimeSources.cpp  DateTimeSources.h  NetworkSource.cpp  NetworkSource.h  PowerSource.cpp  PowerSource.h  Sources.cpp  Sources.h  meson.build
zen/Sources/PulseAudio/: PulseAudioSource.cpp  PulseAudioSource.h  meson.build
